--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'org.litepal.android:core:1.3.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
+    compile group: 'com.opencsv', name: 'opencsv', version: '4.0'
 }
