去除冲突的jar，dialogfragment添加默认构造函数

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,13 @@ android {
     }
 }
 
+configurations{
+    all {
+        exclude module: 'httpclient'
+        exclude module: 'commons-logging'
+    }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
