--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,13 @@
 apply plugin: 'com.android.application'
 
+def releaseTime() {
+    return new Date().format("yyyyMMdd", TimeZone.getTimeZone("UTC"))
+}
+
+def getVersionName(){
+    return "1.1"
+}
+
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -39,4 +47,5 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
     compile group: 'com.opencsv', name: 'opencsv', version: '4.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
