--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     compile 'org.litepal.android:core:1.3.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
-    compile group: 'com.opencsv', name: 'opencsv', version: '4.0'
-    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.46'
+    compile 'com.opencsv:opencsv:4.0'
+    compile 'com.alibaba:fastjson:1.2.46'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
